# bitNet_android

./: .gitignore  .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/simuel/onebitllm/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bitnet_jni.cpp  bitnet_jni.h
app/src/main/cpp/include/: bitnet_android.h
app/src/main/java/com/simuel/onebitllm/: BitnetApplication.kt  BitnetNative.kt  MainActivity.kt
app/src/main/java/com/simuel/onebitllm/data/bitnet/: BitnetNativeDataSource.kt  BitnetNativeDataSourceImpl.kt
app/src/main/java/com/simuel/onebitllm/data/datasource/: BitnetNativeDataSource.kt  BitnetNativeDataSourceImpl.kt  ChatDataSource.kt  ChatDataSourceImpl.kt  UserDataStoreDataSource.kt  UserDataStoreDataSourceImpl.kt  UserPreferencesDataSource.kt  UserPreferencesDataSourceImpl.kt
app/src/main/java/com/simuel/onebitllm/data/db/: AppDatabase.kt
app/src/main/java/com/simuel/onebitllm/data/db/dao/: ChatDao.kt  MessageDao.kt
app/src/main/java/com/simuel/onebitllm/data/db/entities/: Chat.kt  ChatEntity.kt  ChatWithLastMessage.kt  Message.kt  MessageEntity.kt
app/src/main/java/com/simuel/onebitllm/data/db/util/: DateConverter.kt
app/src/main/java/com/simuel/onebitllm/data/model/: BitnetOperationResult.kt  ModelLoadProgress.kt  ModelLoadProgressDto.kt  OperationResultDto.kt  UserPreferencesDto.kt
app/src/main/java/com/simuel/onebitllm/data/preferences/: UserPreferencesManager.kt
app/src/main/java/com/simuel/onebitllm/data/repository/: BitnetRepositoryImpl.kt  ChatRepositoryImpl.kt  SettingsRepositoryImpl.kt  UserDataStoreRepositoryImpl.kt  UserPreferencesRepositoryImpl.kt
app/src/main/java/com/simuel/onebitllm/di/: DataSourceModule.kt  DataStoreModule.kt  DatabaseModule.kt  RepositoryModule.kt
app/src/main/java/com/simuel/onebitllm/domain/model/: Chat.kt  ChatData.kt  ChatMessage.kt  ChatPreferences.kt  ChatSummary.kt  ErrorCode.kt  MessageData.kt  ModelSyncStatus.kt  OperationResult.kt  ResponseEvent.kt  UserPreferences.kt
app/src/main/java/com/simuel/onebitllm/domain/repository/: BitnetRepository.kt  ChatRepository.kt  SettingsRepository.kt  UserDataStoreRepository.kt  UserPreferencesRepository.kt
app/src/main/java/com/simuel/onebitllm/domain/usecase/: ChatListUseCases.kt  ChatUseCases.kt  CreateChatUseCase.kt  DeleteChatUseCase.kt  GenerateResponseUseCase.kt  GetChatMessagesUseCase.kt  GetChatSummariesUseCase.kt  GetChatsUseCase.kt  LoadModelUseCase.kt  ReleaseModelUseCase.kt  UpdateChatTitleUseCase.kt  UpdateSystemPromptUseCase.kt
app/src/main/java/com/simuel/onebitllm/presentation/model/: ChatResponseState.kt  ModelSyncState.kt
app/src/main/java/com/simuel/onebitllm/ui/chat/: ChatRoute.kt  ChatScreen.kt  ChatViewModel.kt
app/src/main/java/com/simuel/onebitllm/ui/chatlist/: ChatListScreen.kt  ChatOptionsDialog.kt  ChatRoomListContent.kt  ChatRoomListDialogs.kt  ChatRoomListEmptyState.kt  ChatRoomListItem.kt  ChatRoomListRoute.kt  ChatRoomListScreen.kt  ChatRoomListTopBar.kt  ChatRoomListViewModel.kt
app/src/main/java/com/simuel/onebitllm/ui/model/: ChatResponseState.kt  ChatRoomItemUiState.kt  ChatRoomListState.kt  ChatState.kt  DialogState.kt  ModelSyncState.kt  SplashEffect.kt
app/src/main/java/com/simuel/onebitllm/ui/navigation/: BitnetNavGraph.kt
app/src/main/java/com/simuel/onebitllm/ui/splash/: SplashRoute.kt  SplashScreen.kt  SplashViewModel.kt
app/src/main/java/com/simuel/onebitllm/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/simuel/onebitllm/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
